--- a/index.html
+++ b/index.html
@@ -94,5 +94,5 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Charles Kondrath</a>.
   </div>
-</body>  -->
+</body> 
 </html>
