--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="monthSm">/ month</div>
       </div>
       </div>
-       <div class="slider-content"><input type="range" id="vol" name="vol" min="0" max="100" step="5" value="20" class="range slider" onclick="start()"></div>       
+       <div class="slider-content"><input type="range" id="vol" name="vol" min="0" max="100" step="5" value="20" class="range slider" oninput="start()" ></div>       
         
 
             
