--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
           <div class="monthSm">/ month</div>
         </div>
         </div>
-         <div class="slider-content">
-           <lable for="vol" ><input type="range" id="vol" name="vol" min="0" max="100" step="5" value="20" class="range slider" oninput="start()"></lable>
-          </div>
+        
+           <lable for="vol" class="slider-content">
+             <input type="range" id="vol" name="vol" min="0" max="100" step="5" value="20" class="range slider" oninput="start()">
+          </lable>
+          
    
    
             <!-- Billing toggle switch -->
