--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         </div>
         </div>
 
-        <lable for="vol" class="slider-content">
-          <input type="range" id="vol" name="vol" min="0" max="100" step="5" value="20" class="range slider" oninput="start()">
-          </lable>       
+        <lable for="vol"></lable> 
+          <div class="slider-content"><input type="range" id="vol" name="vol" min="0" max="100" step="5" value="20" class="range slider" oninput="start()"></div>
+                
           
    
    
